fixed color contrast issue

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -50,10 +50,6 @@ picture img {
   border-radius: 5%;
 }
 
-.name {
-  color: var(--dark-color);
-}
-
 /*===== Navigation Style =====*/
 nav {
   background-color: #36454f;
@@ -76,7 +72,7 @@ nav a:hover {
 }
 
 .active {
-  color: var(--text-color);
+  color: rgb(247, 255, 138);
 }
 
 .open li {
@@ -96,6 +92,8 @@ nav a:hover {
 
 h1,
 h2 {
+  color: var(--text-color);
+
   font-family: var(--title-font);
 }
 
@@ -104,25 +102,25 @@ h2 {
   grid-row: 1/2;
   text-align: center;
   font-size: 1.2rem;
-  color: var(--text-color);
   border-bottom: double;
 }
 
 .card {
   width: 100%;
   height: 200px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 2px solid var(--dark-color);
   background-color: var(--white-color);
   border-radius: 1rem;
 }
 
 .card-header {
   height: 30%;
-  background: var(--third-color);
-  color: var(--dark-color);
+  background: var(--dark-color);
+  color: var(--first-color);
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 10px 10px 0 0;
 }
 
 .left {
@@ -138,7 +136,7 @@ h2 {
 section ul li a {
   padding: 15px;
   text-decoration: none;
-  color: var(--second-color);
+  color: var(--dark-color);
   font-family: var(--body-font);
   margin-bottom: 10px;
 }
@@ -149,8 +147,8 @@ section ul {
 
 /*===== Footer Style =====*/
 footer {
-  background-color: var(--dark-color);
-  color: var(--white-color);
+  background-color: var(--third-color);
+  color: b;
   padding: 15px;
   text-align: center;
   width: 100%;
